# 432hz

./: .gitignore  432hz_player.sln  432hz_player.vcxproj  CMakeLists.txt  README.md
MIDI/: (Ac. Piano) Debussy - Clair De Lune.mid  (Ac. Piano) Scott Joplin - Maple Leaf Rag.mid  (GS) Animusic 2 - Heavy Light.mid  (GS) Arvi Teikari - Baba Is You - Water Is Sink.mid  (GS) Crow Hill - Top Gear Opening Theme.mid  (GS) JINJER - Pisces (ColomboGMGS2 Remake).mid  (GS) Jeff Lorber - Grasshopper (Pitched Up).mid  (GS) Laura Shigihara - Plants Vs. Zombies - Crazy Dave.mid  (GS) Linkin Park - Burn It Down (ColomboGMGS2 Remake).mid  (GS) Linkin Park - Session (ColomboGMGS2 Remake).mid  (GS) Metallica - Creeping Death.mid  (GS) Michael Jackson - Beat It.mid  (GS) Mika Singh - Lag Gayi 440 Volts.mid  (GS) OC - Resurrection.mid  (GS) Phil Collins - In The Air Tonight (Resequence).mid  (GS) Red Hot Chilli Peppers - Higher Ground.mid  (GS) Shakira ft. Maluma - Chantaje.mid  (GS) Stevie Wonder - Higher Ground.mid  (GS) TOTO - Struck By Lightning.mid  (GS) Tears For Fears - Everybody Wants To Rule The World.mid  (GS) Van Halen - Jump.mid  (GS) Weird Al Yankovic - Like A Surgeon.mid  (Guitars) Sam Tinnesz - Legends Are Made (ColomboGMGS2 Remake).mid  (XG) Bomfunk MCs - Freestyler XG (JayB) - patched.mid  (XG) Chinese Traditional - Jiang He Shui.mid  (XG) Groveland Road - Giddyap (Patched).MID  (XG) Morten Saether - Lost.MID  (XG) YME'97 - Rock Wah.mid  a-banda.mid  gita.mid  mrbolero.mid  negue.mid  rancheira.mid  retalhos-de-cetim.mid
MIDI/Brasileiras/: brasileirinho.mid  tico_tico_no_fuba.mid
src/: debug_console.h  gui_app.h  instrument.h  lut.cpp  lut.h  main.cpp  midi_loader.h  midi_out_engine.h  notes_432.h  reverb.h  sf2_engine.h  tuning.h
